fixing things - Jakarta EE